Fixed footer spacing

--- a/trailfinders/static/css/style.css
+++ b/trailfinders/static/css/style.css
@@ -141,6 +141,7 @@ h2 {
 footer {
     background-color: rgba(255,255,255);
     padding-top: 20px;
+    padding-left: 10px;
 }
 
 footer h3 {
